--- a/Lab_1_Assignment_v1.ipynb
+++ b/Lab_1_Assignment_v1.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "NnoQB6EGR9-F"
       },
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "muCcAzdLlAMJ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "LycVKmJMlGop"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "hqXYBZOklNiE"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "ZFu0SAevmefQ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "7VWthpCOn7bq"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "GMXj5_QUofL6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "J4UQ4vSyowSr"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,7 +215,7 @@
       "metadata": {
         "id": "3JmeibgYoz8i"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "fzcKGdtepMB8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "a7zkJ4MfpVEm"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "O4NyWDAqp3ty"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "4FiUXYugp7oQ"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,6 +289,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Variable and argument passing"
+      ],
+      "metadata": {
+        "id": "zV_bRvZ5vVS6"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -297,6 +306,433 @@
       "outputs": [],
       "source": [
         "# Type code below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1, 2, 3]"
+      ],
+      "metadata": {
+        "id": "RaAM10KhvZ6e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a"
+      ],
+      "metadata": {
+        "id": "PhZzK8zEvegv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n3KUo4Ikvgqk",
+        "outputId": "3599e9b2-3e4d-42c7-f1bc-deb38f56c3ad"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.append(4)"
+      ],
+      "metadata": {
+        "id": "oIrWMm7Cvi9p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qyqFft1gvnHQ",
+        "outputId": "09a95288-3844-440a-94d6-c841d36cf9ba"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def append_element(some_list, element):\n",
+        "    some_list.append(element)"
+      ],
+      "metadata": {
+        "id": "kugHb9jQvsZj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [1, 2, 3]"
+      ],
+      "metadata": {
+        "id": "8w-u8Alyv1fU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "append_element(data, 4)"
+      ],
+      "metadata": {
+        "id": "bnb7entOv44f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dKDqDidTv7at",
+        "outputId": "cb19416c-b5f0-4d7e-c825-5822a37e7d61"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dynamic references, strong types"
+      ],
+      "metadata": {
+        "id": "BrSGkXrOv9vQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5"
+      ],
+      "metadata": {
+        "id": "RyIGabruwAls"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N72JTu_RwCnp",
+        "outputId": "2612a0d1-9079-48fa-b131-de1a18719877"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"foo\""
+      ],
+      "metadata": {
+        "id": "37vCKnjQwFXL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hy0HHnpHwIL6",
+        "outputId": "2575cfa5-4867-4173-c005-cc3ba9e5403b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"5\" + 5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "Dg6BBLotwMxa",
+        "outputId": "ba9309a0-d315-4ff8-e3d3-f30ca3b07958"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can only concatenate str (not \"int\") to str",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-30-4107985378.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"5\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 4.5"
+      ],
+      "metadata": {
+        "id": "HW8FjGr7wSos"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 2"
+      ],
+      "metadata": {
+        "id": "Z-z3YxO8wVKY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"a is {type(a)}, b is {type(b)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JojvjI84wX4V",
+        "outputId": "97d1bea5-a8c7-4222-d805-d0da24adb44d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is <class 'float'>, b is <class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a / b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lDB81ESXwp_m",
+        "outputId": "ef8298e4-c1ba-4f5e-a2a1-eed319710416"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5"
+      ],
+      "metadata": {
+        "id": "tv1HHPcLwsIH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "isinstance(a, int)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EpvLHPU_wuVN",
+        "outputId": "a1a0feeb-15df-4c57-a07b-f723b325cd7e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5; b = 4.5"
+      ],
+      "metadata": {
+        "id": "xLIcdgaXwxZ2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "isinstance(a, (int, float))"
+      ],
+      "metadata": {
+        "id": "LCVWfoOhw0zi",
+        "outputId": "e8a9e3a8-ec15-4663-aba5-128e329034c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "isinstance(b, (int, float))"
+      ],
+      "metadata": {
+        "id": "11ZFn4mew4_g",
+        "outputId": "45a5d757-31cb-45f0-fa2e-ca44553bd515",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
       ]
     },
     {
