--- a/Lab_1_Assignment_v1.ipynb
+++ b/Lab_1_Assignment_v1.ipynb
@@ -767,6 +767,241 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The imports section requires using another file did not do it."
+      ],
+      "metadata": {
+        "id": "ahgwZ5nw1-9w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 - 7"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E2Dho55g1rBc",
+        "outputId": "7a523844-87e9-4059-bbd2-3c45b43e0a25"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "12 + 21.5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M3XtWXYY1Gw5",
+        "outputId": "90454386-02c7-4d44-9147-241fc75b1154"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "33.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 <= 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fH5o7Iu61LMd",
+        "outputId": "28d3ba1b-84f6-4a2f-c3b7-0e51647e143a"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1, 2, 3]"
+      ],
+      "metadata": {
+        "id": "cIBItEZV2Psz"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a"
+      ],
+      "metadata": {
+        "id": "yAi9czB-2Pop"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = list(a)"
+      ],
+      "metadata": {
+        "id": "AncaPLim2PhH"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a is b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IBtcgbTV2PWd",
+        "outputId": "4d2d5c96-6ec9-4f9f-cf29-e506769679e5"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a is not c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6H-vVXPD2adG",
+        "outputId": "d6d970f8-31bf-4fb9-b864-a0de754b12f5"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a == c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_dSbyKW42dsa",
+        "outputId": "6423a0a4-fd7e-4fc5-feb9-235601fe6438"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = None"
+      ],
+      "metadata": {
+        "id": "Q_3aZ8592o7R"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a is None"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "di0UZx4z2r0L",
+        "outputId": "7dfc4f7c-c8ab-4873-e91f-0c8a3d3001d2"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "HxKMYdWLR9-G"
       },
@@ -792,6 +1027,93 @@
       "outputs": [],
       "source": [
         "# Type code below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_list = [\"foo\", 2, [4, 5]]"
+      ],
+      "metadata": {
+        "id": "ux-hC7vi24oD"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_list[2] = (3, 4)"
+      ],
+      "metadata": {
+        "id": "XXoWBbyx2-VM"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_list"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uXOjhEqZ3BqY",
+        "outputId": "b1dd6243-27a6-4458-bb98-d0fc37d78de9"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['foo', 2, (3, 4)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_tuple = (3, 5, (4, 5))"
+      ],
+      "metadata": {
+        "id": "NDbf5hfG3E92"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a_tuple[1] = \"four\""
+      ],
+      "metadata": {
+        "id": "JGusRNSp3IZ5",
+        "outputId": "4d8f3aee-563f-4d11-85f5-08b43744ad48",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'tuple' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-61-1228245352.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"four\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
       ]
     },
     {
