--- a/Lab_1_Assignment_v1.ipynb
+++ b/Lab_1_Assignment_v1.ipynb
@@ -1094,12 +1094,12 @@
         "a_tuple[1] = \"four\""
       ],
       "metadata": {
-        "id": "JGusRNSp3IZ5",
-        "outputId": "4d8f3aee-563f-4d11-85f5-08b43744ad48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 144
-        }
+        },
+        "id": "JGusRNSp3IZ5",
+        "outputId": "4d8f3aee-563f-4d11-85f5-08b43744ad48"
       },
       "execution_count": 61,
       "outputs": [
@@ -1143,6 +1143,602 @@
       "outputs": [],
       "source": [
         "# Type code below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ival = 17239871"
+      ],
+      "metadata": {
+        "id": "_5LUsygHAaJU"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ival ** 6"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7X8KwVzbAncD",
+        "outputId": "6f1e95c6-c600-4ed5-d442-8560914b0006"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "26254519291092456596965462913230729701102721"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fval = 7.243"
+      ],
+      "metadata": {
+        "id": "xF5Is9AvAqTV"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fval2 = 6.78e-5"
+      ],
+      "metadata": {
+        "id": "p4jo0lWiAxuW"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3 / 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R5tSYLWqA4Bg",
+        "outputId": "c6c77992-7b2f-4f19-9609-0aed2f2ed2bd"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3 // 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J-hhC8WyA7HI",
+        "outputId": "98274751-e8d0-47c6-d803-a99f8e6d164d"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 'one way of writing a string'"
+      ],
+      "metadata": {
+        "id": "JlwrZ7hRBD0s"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"another way\""
+      ],
+      "metadata": {
+        "id": "9QvJL-lpBIET"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = \"\"\"\n",
+        "This is a longer string that\n",
+        "spans multiple lines\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "QHUlV5hYDO1l"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c.count(\"\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-TESQZD7BLjy",
+        "outputId": "88772e6e-520b-44e0-b162-c1d6d4329577"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"this is a string\""
+      ],
+      "metadata": {
+        "id": "HyUic84wDRYD"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " a[10] = \"f\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "lXTGPTx4DU6X",
+        "outputId": "5a57ec9c-9e0d-455b-d659-4b78eac74147"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'str' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-74-2299801752.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"f\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a.replace(\"string\", \"longer string\")"
+      ],
+      "metadata": {
+        "id": "-56fE6k0DX0V"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "1HeaeqxFDaup",
+        "outputId": "19d6e155-7298-4054-80b2-40274614b179"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'this is a longer string'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "EraHLas1DcYN",
+        "outputId": "0fec56ca-350e-4613-f4ef-e0648456bdc1"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'this is a string'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5.6"
+      ],
+      "metadata": {
+        "id": "JwCudtnvDfXp"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = str(a)"
+      ],
+      "metadata": {
+        "id": "ui211NC7DfUg"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fnm0ZMKuDfRX",
+        "outputId": "6aa43099-8bb5-466a-e399-5bae1b6cd1cb"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"python\""
+      ],
+      "metadata": {
+        "id": "gipR5HzFDfN_"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YfKgrB_VDfK3",
+        "outputId": "618380d4-af80-4a27-e25c-00c99d1cf269"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['p', 'y', 't', 'h', 'o', 'n']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "kXESBsfmDfHj",
+        "outputId": "31af7dee-ab89-494a-c0f3-c6f34031b4ef"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'pyt'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"12\\\\34\""
+      ],
+      "metadata": {
+        "id": "XvJMG1zgDfD4"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HHzoBqQoDe3X",
+        "outputId": "3b08635f-42fc-4354-a439-bfa5fc0857cc"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\\34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"this is the first half \""
+      ],
+      "metadata": {
+        "id": "0i1vIxehD4qH"
+      },
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = \"and this is the second half\""
+      ],
+      "metadata": {
+        "id": "woF6scTFD4m9"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a + b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "JHxK_0TdD4jn",
+        "outputId": "6ea69a3b-c1fd-4b22-f844-a86e890e06a2"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'this is the first half and this is the second half'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "template = \"{0:.2f} {1:s} are worth US${2:d}\""
+      ],
+      "metadata": {
+        "id": "IKYo0sJCD4gT"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "template.format(88.46, \"Argentine Pesos\", 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "vsNAihhjD4ck",
+        "outputId": "360d5450-0923-4d51-d1b8-269cd27c2fea"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'88.46 Argentine Pesos are worth US$1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "amount = 10"
+      ],
+      "metadata": {
+        "id": "VzbAI3iKD4WD"
+      },
+      "execution_count": 93,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rate = 88.46"
+      ],
+      "metadata": {
+        "id": "LCQwxMP3EJYs"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "currency = \"Pesos\""
+      ],
+      "metadata": {
+        "id": "w5MGYlowEJWE"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = f\"{amount} {currency} is worth US${amount / rate}\""
+      ],
+      "metadata": {
+        "id": "D85gJhxLEJTO"
+      },
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f\"{amount} {currency} is worth US${amount / rate:.2f}\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "4pHUj2woEJP1",
+        "outputId": "36cebfe4-2432-44b8-88d4-53a71ed70ad4"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'10 Pesos is worth US$0.11'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
       ]
     },
     {
